correçao da funçao apagar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                 </div>
             </form> 
         </header>
-            <div class="resposta" id="resposta"></div>
+        <main>
+            <div id="resposta"></div>
+        </main>
         <footer>
             Todos Direitos Reservado - Daviny 2021 - Projeto  para curso da Reprograma
         </footer>
